--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
     "linter": "npx eslint src/*.js",
-    "start": "npx eslint src/*.js && npm run build && nodemon app.js "
+    "start-build": "npx eslint src/*.js && npm run build && nodemon app.js ",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
