--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,46 @@
 {
-    "presets": ["@babel/preset-env"]
+    "presets": ["@babel/preset-env"] ,
+    "plugins": [
+        [
+          "@babel/plugin-transform-runtime",
+          {
+            "absoluteRuntime": false,
+            "corejs": false,
+            "helpers": true,
+            "regenerator": true,
+            "useESModules": false
+          }
+        ]
+      ]
+
 }
+
+// {
+//     "presets": [
+//       ["@babel/preset-env", {
+//         "useBuiltIns": "entry",
+//       }]
+//     ],
+//   }
+
+// {
+//     "presets": [
+//       [
+//         "@babel/preset-env", {
+//           "targets": {
+//             "node": "11"
+//           }
+//         },
+//       ],
+    
+//     ]
+//   }
+
+// {
+//     "plugins": [
+//       ["transform-runtime", {
+//         "polyfill": false,
+//         "regenerator": true
+//       }]
+//     ]
+// }
