--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-MONGODB_URI = "mongodb://webteam:2018_connect*.*@ds129540.mlab.com:29540/apostlite"
+MONGODB_URI = "mongodb+srv://tester:dbtester@cluster0-qbc48.mongodb.net/test?retryWrites=true"
+host = 127.0.0.1
