--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "babel src -d lib",
     "linter": "npx eslint src/*.js",
-    "start-build": "npm run linter && npm run build && node app.js ",
-    "start": "npm run build && node app.js"
+    "start-build": "npm run linter && npm run build && node app.js",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
