add user route end points add user controller add multer add S3 file upload

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 MONGODB_URI = "mongodb+srv://tester:dbtester@cluster0-qbc48.mongodb.net/test?retryWrites=true"
+accessKeyId = AKIAISWYXR5KRO7X3UTA
+secretAccessKey = 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
+
 
