--- a/package.json
+++ b/package.json
@@ -37,7 +37,9 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/runtime": "^7.4.4",
+    "aws-sdk": "^2.477.0",
     "body-parser": "^1.18.3",
+    "busboy": "^0.3.1",
     "cors": "^2.8.5",
     "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
@@ -45,6 +47,7 @@
     "faker": "^4.1.0",
     "jsonapi-serializer": "^3.6.4",
     "mongoose": "^5.4.16",
+    "multer": "^1.4.1",
     "regenerator-runtime": "^0.13.2"
   }
 }
