--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "express": "^4.16.4",
     "faker": "^4.1.0",
     "jsonapi-serializer": "^3.6.4",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
     "multer": "^1.4.1",
     "regenerator-runtime": "^0.13.2"
