--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jsonapi-serializer": "^3.6.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.16",
+    "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.1",
     "regenerator-runtime": "^0.13.2"
   }
