add mailer to send emails to users

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 MONGODB_URI = "mongodb+srv://tester:dbtester@cluster0-qbc48.mongodb.net/test?retryWrites=true"
 accessKeyId = AKIAISWYXR5KRO7X3UTA
 secretAccessKey = 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
+SENDGRID_API_KEY = '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'
 
 
