--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@babel/core": "^7.3.4",
     "@babel/runtime": "^7.4.4",
+    "@sendgrid/mail": "^6.4.0",
     "aws-sdk": "^2.477.0",
     "body-parser": "^1.18.3",
     "busboy": "^0.3.1",
@@ -50,6 +51,7 @@
     "mongoose": "^5.4.16",
     "mongoose-slug-generator": "^1.0.4",
     "multer": "^1.4.1",
+    "nodemailer": "^6.3.0",
     "regenerator-runtime": "^0.13.2"
   }
 }
